--- a/index.html
+++ b/index.html
@@ -1,49 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./script.js"></script>
-  <title>Mood Booster</title>
-</head>
-<body>
-  <div class="row">
-    <div class="col-12">
-      <h1>How are you today?</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
+    <title>Mood Booster</title>
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light"
+      style="background-color: #8d8d8d"
+    >
+      <a href="#" class="navbar-brand">Mood Booster</a>
+    </nav>
+    <div class="row">
+      <div class="col-12">
+        <h1>How are you today?</h1>
+        <!-- Will be replaced with response content -->
+        <p>Click one button that represents your feeling now.</p>
+      </div>
+
       <!-- Will be replaced with response content -->
-      <p>Click one button that represents your feeling now.</p>
-    </div>
-    
-    <!-- Will be replaced with response content -->
-    <div class="col-12">
-      <div class="row">
-        <div class="col-3">mood1</div>
-        <div class="col-3">mood2</div>
-        <div class="col-3">mood3</div>
-        <div class="col-3">mood4</div>
-        <div class="col-3">mood5</div>
-        <div class="col-3">mood6</div>
-        <div class="col-3">mood7</div>
-        <div class="col-3">mood8</div>
-      </div>
-    </div>
-    
-    <!-- This response content will replace buttons -->
-    <div class="col-12">
-      <div class="row">
-        <div class="col-12">
-          <!-- Negative/Postive -->
-          <p>”Good on ya! Here’s a quote to add the goodness into your day!”</p>
+      <div class="col-12">
+        <div class="row">
+          <div id="feelings" class="col-3">Happy</div>
+          <div id="feelings_sad" class="col-3">Sad</div>
+          <div id="feelings_excited" class="col-3">Excited</div>
+          <div id="feelings_tired" class="col-3">Tired</div>
+          <div id="feelings_care" class="col-3">Care</div>
+          <div id="feelings_anxious" class="col-3">Anxious</div>
+          <div id="feelings_confused" class="col-3">Confused</div>
+          <div id="feelings_bored" class="col-3">Bored</div>
         </div>
-        <div class="col-12">
-          <!-- Quote -->
-          <p>”A quote a day keep the depression away!”</p>
-        </div>
-        <div class="col-12">Try Again</div>
       </div>
+
+      <!-- This response content will replace buttons -->
+      <div class="col-12">
+        <div class="row">
+          <div class="col-12">
+            <!-- Negative/Postive -->
+            <p>
+              ”Good on ya! Here’s a quote to add the goodness into your day!”
+            </p>
+          </div>
+          <div class="col-12">
+            <!-- Quote -->
+            <p>”A quote a day keep the depression away!”</p>
+          </div>
+          <div class="col-12">Try Again</div>
+        </div>
+      </div>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"
+      ></script>
     </div>
-  </div>
-  <footer>Mood Booster. Copyright &copy;. Ana Lazarevska. Duong Pham. Jessica Gozali.</footer>
-</body>
+    <footer>
+      Mood Booster. Copyright &copy;. Ana Lazarevska. Duong Pham. Jessica
+      Gozali.
+    </footer>
+  </body>
 </html>
