Grab the buttons

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <div class="col-12">
         <h1>How are you today?</h1>
         <!-- Will be replaced with response content -->
-        <p>Click one button that represents your feeling now.</p>
+        <p class="intro-text">Click one button that represents your feeling now.</p>
       </div>
 
       <!-- Will be replaced with response content -->
-      <div class="col-12">
+      <div class="col-12 mood-buttons">
         <div class="row">
           <div id="feelings" class="col-3">Happy</div>
           <div id="feelings_sad" class="col-3">Sad</div>
@@ -43,17 +43,17 @@
       </div>
 
       <!-- This response content will replace buttons -->
-      <div class="col-12">
+      <div class="col-12" id="response-content">
         <div class="row">
           <div class="col-12">
             <!-- Negative/Postive -->
-            <p>
+            <p class="mood-text">
               ”Good on ya! Here’s a quote to add the goodness into your day!”
             </p>
           </div>
           <div class="col-12">
             <!-- Quote -->
-            <p>”A quote a day keep the depression away!”</p>
+            <p id="the-quote">”A quote a day keep the depression away!”</p>
           </div>
           <div class="col-12">Try Again</div>
         </div>
