event listener start

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       <!-- Will be replaced with response content -->
       <div class="col-12 mood-buttons">
         <div class="row">
-          <div id="feelings" class="col-3">Happy</div>
-          <div id="feelings_sad" class="col-3">Sad</div>
-          <div id="feelings_excited" class="col-3">Excited</div>
-          <div id="feelings_tired" class="col-3">Tired</div>
-          <div id="feelings_care" class="col-3">Care</div>
-          <div id="feelings_anxious" class="col-3">Anxious</div>
-          <div id="feelings_confused" class="col-3">Confused</div>
-          <div id="feelings_bored" class="col-3">Bored</div>
+          <button id="feelings" class="col-3">Happy</button>
+          <button id="feelings_sad" class="col-3">Sad</button>
+          <button id="feelings_excited" class="col-3">Excited</button>
+          <button id="feelings_tired" class="col-3">Tired</button>
+          <button id="feelings_care" class="col-3">Care</button>
+          <button id="feelings_anxious" class="col-3">Anxious</buttonv>
+          <button id="feelings_confused" class="col-3">Confused</button>
+          <button id="feelings_bored" class="col-3">Bored</button>
         </div>
       </div>
 
