fix typos and bitton ids

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <div class="container">
           
           <div class="row text-center">
-            <button type="button" class="col-3 btn btn-danger mr-10">Happy</button>
-            <button type="button" class="col-3 btn btn-dark">Sad</button>
-            <button type="button" class="col-3 btn btn-warning">Excited</button>
-            <button type="button" class="col-3 btn btn-secondary">Tired</button>
-            <button type="button" class="col-3 btn btn-info">Care</button>
-            <button type="button" class="col-3 btn btn-warning">Anxious</button>
-            <button type="button" class="col-3 btn btn-primary">Confuse</button>
-            <button type="button" class="col-3 btn btn-light">Bored</button>
+            <button type="button" class="col-3 btn btn-danger mr-10" id="happy_button">Happy</button>
+            <button type="button" class="col-3 btn btn-dark" id="sad_button">Sad</button>
+            <button type="button" class="col-3 btn btn-warning" id="excited_button">Excited</button>
+            <button type="button" class="col-3 btn btn-secondary" id="tired_button">Tired</button>
+            <button type="button" class="col-3 btn btn-info" id="scared_button">Scared</button>
+            <button type="button" class="col-3 btn btn-warning" id="anxious_button">Anxious</button>
+            <button type="button" class="col-3 btn btn-primary" id="confused_button">Confused</button>
+            <button type="button" class="col-3 btn btn-light" id="bored_button">Bored</button>
           </div>
           
         </div>
