--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 ”Good on ya! Here’s a quote to add the goodness into your day!”
               </p>
             </div>
-          </section>
             <div class="col-12">
               <!-- Quote -->
-              <p>”A quote a day keep the depression away!”</p>
+              <p id="quote_body">”A quote a day keeps the depression away!”</p>
             </div>
-            <div class="col-12">Try Again</div>
+          </section>
+            <button class="col-12" id="again">Try Again</button>
           </div>
         </div>
         <script
