Add new API again, found one with categories

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <footer class="p-4 bg-dark text-white text-center position-relative">
           <div class="container">
           <p class="lead">
-            Copyright &copy;. Ana Lazarevska. Duong Pham. Jessica
-            Gozali.
+            Copyright &copy;. Ana Lazarevska. Duong Pham. Jessica Gozali.
           </p>
           </div>
         </footer>
