--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <div class="row">
                     <div class="col-12">
                         <!-- Negative/Postive -->
-                        <p class="text-light">
-                          ”Good on ya! Here’s a quote to add the goodness into your day!”
+                        <p class="text-light intro-text">
+                          Here's a quote to add the goodness into your day!
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-12">
                 <!-- Quote -->
-                <p id="quote_body">”A quote a day keeps the depression away!”</p>
+                <p id="quote_body">"A quote a day keeps the depression away!"</p>
             </div>
         </section>
         
