Add emoji to button

--- a/index.html
+++ b/index.html
@@ -50,56 +50,56 @@
               class="btn btn-danger btn-lg hero-button"
               id="happy_button"
             >
-              Happy
+              Happy 😊
             </button>
             <button
               type="button"
               class="btn btn-dark btn-lg hero-button"
               id="sad_button"
             >
-              Sad
+              Sad 😢
             </button>
             <button
               type="button"
               class="btn btn-warning btn-lg hero-button"
               id="excited_button"
             >
-              Excited
+              Excited 🤩
             </button>
             <button
               type="button"
               class="btn btn-secondary btn-lg hero-button"
               id="tired_button"
             >
-              Tired
+              Tired 🤤
             </button>
             <button
               type="button"
               class="btn btn-info btn-lg hero-button"
               id="scared_button"
             >
-              Scared
+              Scared 😱
             </button>
             <button
               type="button"
               class="btn btn-warning btn-lg hero-button"
               id="anxious_button"
             >
-              Anxious
+              Anxious 😰
             </button>
             <button
               type="button"
               class="btn btn-primary btn-lg hero-button"
               id="confused_button"
             >
-              Confused
+              Confused 😕
             </button>
             <button
               type="button"
               class="btn btn-light btn-lg hero-button"
               id="bored_button"
             >
-              Bored
+              Bored 🥱
             </button>
           </div>
         </div>
