--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <h1 class="heading">How are you today?</h1>
               <!-- Will be replaced with response content -->
               <p class="homepage-element">
-                Click one button that represents your feeling now.
+                Click one button that represents how you are feeling right now.
               </p>
             </div>
           </div>
