Add changing background

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </section>
 
       <!-- This response content will replace buttons -->
-      <section class="bg-primary text-light p-5 text-center quotepage-element">
+      <section class="text-light p-5 text-center quotepage-element" id="changing-bg">
         <div class="col-12">
           <div class="row">
             <div class="col-12">
@@ -124,14 +124,14 @@
             A quote a day keeps the depression away!
           </blockquote>
         </div>
-
-        <!-- Button to return to homepage -->
-        <button class="btn btn-info btn-lg hero-button" id="again">
-          Try Again
-        </button>
       </section>
 
-      <div class="spacer-10"></div>
+      <!-- <div class="spacer-10"></div> -->
+
+      <!-- Button to return to homepage -->
+      <button class="btn btn-info btn-lg hero-button" id="again">
+        Try Again
+      </button>
     </main>
 
     <!-- Footer -->
